added side navbar

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     </style>
 </head>
 <body>
+    <div id="sidebar-root"></div>
     <h1>CUDA GEMM টিউটোরিয়াল: নেইভ থেকে হাই-পারফরম্যান্স</h1>
     
     <p>CUDA তে হাই-পারফরম্যান্স ম্যাট্রিক্স মাল্টিপ্লিকেশন কার্নেল লেখার ধাপে ধাপে গাইড। আমরা একটি সিম্পল ইমপ্লিমেন্টেশন থেকে শুরু করে পর্যায়ক্রমে অপটিমাইজ করব NVIDIA T4 GPU তে cuBLAS এর 70-85% পারফরম্যান্স অর্জন করতে।</p>
@@ -92,5 +93,6 @@
 
     <p><a href="chapter1.html">অধ্যায় ১: পরিচিতি ও সেটআপ</a> দিয়ে শুরু করুন</p>
 
+    <script src="nav.js"></script>
 </body>
 </html>
